<resources>
    <string name="app_name">江西气象业务</string>
    <string name="action_settings">Settings</string>
    <!--登录页-->

    <string name="login">登录</string>
    <string name="user">用户</string>
    <string name="remember_ps">记住密码</string>
    <string name="retrieve_password">找回密码</string>

    <string name="regist_1">注册1/2</string>
    <string name="regist_2">注册2/2</string>
    <string name="retrieve_password1">找回密码1/2</string>
    <string name="retrieve_password2">找回密码2/2</string>
    <string name="regst_hint_phone">请输入手机号</string>
    <string name="regist_hint_code">请输入验证码</string>
    <string name="regist_hint_pd">请输入密码</string>
    <string name="regist_hint_pd_confirm">请确认密码</string>
    <string name="regist_next">下一步</string>
    <string name="regist_complete">完成</string>
    <string name="get_code">获取验证码</string>
    <string name="notice_info">还没账号吗？立即注册</string>
    <string name="toolbar_title">江西气象</string>
    <string name="info_feedback_title">信息员反馈</string>
    <string name="mine_help">帮助</string>
    <string name="mine_scale">好评鼓励</string>
    <string name="mine_feedback">意见反馈</string>
    <string name="mine_about">关于我们</string>
    <string name="mine_set">设置</string>
    <string name="home_date">今天</string>
    <string name="see_all">查看全部</string>
    <string name="work_schedule">排班表</string>


    <string name="data_forecast">数值预报</string>
    <string name="data_pg_name1">ec细网格</string>
    <string name="data_pg_name2">grapes模式</string>
    <string name="data_pg_name3">华东区域模式</string>
    <string name="data_pg_name4">wrf短临循环</string>


    <string name="weather_monitor">天气监测</string>
    <string name="wea_monitor_pg_name1">雷达卫星</string>
    <string name="wea_monitor_pg_name2">台风监测</string>
    <string name="wea_monitor_pg_name3">地面常规监测</string>
    <string name="wea_monitor_pg_name4">高空地面图</string>
    <string name="wea_monitor_pg_name4_dm">地面填图</string>
    <string name="wea_monitor_pg_name4_gk">高空观测</string>

    <string name="forecast_warn">预警预报</string>
    <string name="fc_warn_pg_name1">预警信号</string>
    <string name="fc_warn_pg_name2">重要天气报</string>
    <string name="fc_warn_pg_name3">雷达预报</string>
    <string name="fc_warn_pg_name4">格点预报</string>
    <string name="fc_warn_pg_name5">气象风险预报</string>
    <string name="fc_warn_pg_name6">全省文字报</string>
    <string name="fc_warn_pg_name7">格点预报图形</string>
    <string name="fc_warn_pg_name8">短时临近预报</string>

    <string name="service_feedback">服务反馈</string>
    <string name="sv_feedback_pg_name1">决策服务</string>
    <string name="sv_feedback_slip_1">气象情况反馈</string>
    <string name="sv_feedback_slip_2">气象呈阅件</string>
    <string name="sv_feedback_pg_name2">预报评分</string>
    <string name="sv_feedback_pg_name3">信息员反馈</string>
    <string name="sv_feedback_pg_name4">帮助</string>
    <string name="title_activity_regist">RegistActivity</string>
    <string name="title_activity_work_schedule">WorkSchedule</string>
    <string name="work_schedle">排班表</string>
    <string name="today">今天</string>
    <string name="thisweek">本周</string>
    <string name="lastweek">上一周</string>
    <string name="nextweek">下一周</string>
    <string name="datetime">日期</string>
    <string name="watchkeeper">值班人员</string>
    <string name="post">岗位</string>
    <string name="on_duty_time">值班时段</string>
    <string name="sharetest">分享到微博</string>
    <string name="getInfo_error_toast">服务器异常</string>
    <string name="title_activity_regist_next">RegistNextActivity</string>
    <string name="title_activity_messenger_feedback">MessengerFeedbackActivity</string>

    <string name="feedback_location">定位中</string>
    <string name="feedback_submit">提交</string>
    <string name="title_activity_foracaster_score">ForacasterScoreActivity</string>
    <string name="forecaster_score">预报员评分表</string>
    <string name="forecaster_score_mainclass">主班</string>
    <string name="forecaster_score_viceclass">副班</string>
    <string name="forecaster_score_name">姓名</string>
    <string name="forecaster_score_times">次数</string>
    <string name="score">分数</string>
    <string name="forecaster_score_time">时间</string>

    <string name="feedbak_photo">相册</string>
    <string name="feedbak_camera">相机</string>
    <string name="feedbak_cancle">取消</string>
    <string name="title_activity_decision">DecisionActivity</string>


    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_typhoon_monitoring">TyphoonMonitoringActivity</string>
    <string name="title_activity_help">HelpActivity</string>
    <string name="title_activity_gkdmgc">GKDMGCActivity</string>
    <string name="title_activity_dmcgjc">DMCGJCActivity</string>
    <string name="title_activity_gdyb">GdybActivity</string>
    <string name="title_activity_ecxwg">EcxwgActivity</string>
    <string name="weath_warn_dz">地质灾害</string>
    <string name="weath_warn_sh">山洪灾害</string>
    <string name="weath_warn_hl">中小河流洪水</string>
    <string name="title_activity_genefore_action">GeneforeActionActivity</string>
    <string name="genefore_zs">早晨</string>
    <string name="genefore_zw">中午</string>
    <string name="genefore_xw">下午</string>
    <string name="genefore_st">三天</string>
    <string name="cofirm">确定</string>
    <string name="cancel">取消</string>
    <string name="title_activity_gdybtx">GdybtxActivity</string>
    <string name="title_activity_aaaaaaaaa_main2">aaaaaaaaaMain2Activity</string>
    <string name="title_activity_wtf_rapid">WtfRapidActivity</string>
    <string name="title_activity_yujing">YujingActivity</string>
    <string name="title_activity_radar_forecast">RadarForecastActivity</string>
    <string name="title_activity_yujin_info">YujinInfoActivity</string>
    <string name="title_activity_about_ours">AboutOursActivity</string>
    <string name="title_activity_personal_info">PersonalInfoActivity</string>
    <string name="title_activity_pic_deal">PicDealActivity</string>
    <string name="title_activity_zytqyb">ZytqybActivity</string>
    <string name="title_activity_dsljyb">DsljybActivity</string>
    <string name="title_activity_collection">CollectionActivity</string>
    <string name="title_activity_collection_detail">CollectionDetailActivity</string>
    <string name="title_activity_dsljyb_gaode">DsljybGaodeActivity</string>
    <string name="title_activity_test">testActivity</string>
    <string name="title_activity_zytqyb_gao_de">ZytqybGaoDeActivity</string>
    <string name="title_activity_yu_jing_gao_de">YuJingGaoDeActivity</string>
    <string name="title_activity_gdyb_gao_de">GdybGaoDeActivity</string>
    <string name="title_activity_location_change">LocationChangeActivity</string>
    <string name="title_activity_gdyb_gao_de1">GdybGaoDeActivity1</string>
    <string name="title_activity_decision_url">DecisionUrlActivity</string>
</resources>
