<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <group android:id="@+id/group1">
        <item android:id="@+id/nav_help"
            android:icon="@drawable/mine_help"
            app:showAsAction="ifRoom"
            android:title="@string/mine_help" />
        <item android:id="@+id/nav_collection"
            android:icon="@drawable/mine_scale"
            android:title="我的收藏"
            app:showAsAction="ifRoom"/>
        <item android:id="@+id/nav_feedback"
            android:icon="@drawable/mine_feedback"
            android:title="@string/mine_feedback"
            app:showAsAction="ifRoom"/>
        <item android:id="@+id/nav_about"
            android:icon="@drawable/mine_about"
            android:title="@string/mine_about"
            app:showAsAction="ifRoom"/>
        <item android:id="@+id/nav_set"
            android:icon="@drawable/mine_set"
            android:title="@string/mine_set"
            app:showAsAction="ifRoom"/>
    </group>
</menu>