<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_white"
    android:orientation="vertical"
    tools:context="net.univr.pushi.jxatmosphere.feature.RegistActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/regist_toolbar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/spacing_40"
        android:background="@drawable/toolbar_bg">

        <ImageView
            android:id="@+id/retrieve_back"
            style="@style/feture_pic"
            android:src="@drawable/app_left" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/retrieve_password2"
            android:textColor="@color/white"
            style="@style/one_title"/>

    </android.support.v7.widget.Toolbar>

    <android.support.percent.PercentRelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <EditText
            android:id="@+id/re_pw"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginLeft="@dimen/spacing_4"
            android:background="@drawable/edittext_bg"
            android:hint="@string/regist_hint_pd"
            android:inputType="textPassword"
            app:layout_heightPercent="10%"
            app:layout_widthPercent="100%" />


        <EditText
            android:id="@+id/re_pw_1"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_below="@+id/re_pw"
            android:layout_marginLeft="@dimen/spacing_4"
            android:layout_marginTop="@dimen/spacing_10"
            android:background="@drawable/edittext_bg"
            android:hint="@string/regist_hint_pd_confirm"
            android:inputType="textPassword"
            app:layout_heightPercent="10%"
            app:layout_widthPercent="100%" />


        <Button
            android:id="@+id/retrieve_password_complete"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_below="@+id/re_pw_1"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/spacing_30"
            android:background="@drawable/app_btn_backimage"
            android:text="@string/regist_complete"
            android:textColor="@color/white"
            app:layout_heightPercent="7%"
            app:layout_widthPercent="80%" />

    </android.support.percent.PercentRelativeLayout>


</LinearLayout>
