<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="@dimen/spacing_40"
    style="@style/header_color"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/spacing_35"
        android:gravity="center_vertical">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center">

            <TextView
                android:id="@+id/tv1"
                style="@style/one_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lastweek"
                android:textColor="@color/white" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center">

            <TextView
                android:id="@+id/tv2"
                style="@style/two_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/thisweek"
                android:textColor="@color/white" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center">

            <TextView
                android:id="@+id/tv3"
                style="@style/two_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/nextweek"
                android:textColor="@color/white" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="5dp">

        <ImageView
            android:id="@+id/tabline"
            android:layout_width="@dimen/spacing_100"
            android:layout_height="@dimen/spacing_1"
            android:background="@drawable/bg_underline" />
    </LinearLayout>

</LinearLayout>