<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/home_drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="6">


    <android.support.v7.widget.Toolbar xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/home_toolbar"
        style="@style/header_color"
        android:layout_width="match_parent"
        android:layout_height="@dimen/spacing_40"
        app:popupTheme="@style/AppTheme.PopupOverlay">

        <ImageView
            android:id="@+id/info_feedback_back"
            style="@style/feture_pic"
            android:src="@drawable/app_left" />

        <TextView
            style="@style/one_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/info_feedback_title"
            android:textColor="@color/white" />
    </android.support.v7.widget.Toolbar>

    <EditText
        android:id="@+id/feedback_plain"
        style="@style/context_size"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginLeft="@dimen/spacing_28"
        android:layout_marginTop="@dimen/spacing_10"
        android:layout_weight="2"
        android:background="@null"
        android:enabled="true"
        android:gravity="top"
        android:maxLines="10"
        android:minLines="8"
        android:scrollbars="vertical" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <ImageView
            android:id="@+id/redy_upload_pic"
            android:layout_width="@dimen/spacing_100"
            android:layout_height="match_parent"
            android:layout_marginLeft="@dimen/spacing_20"
            android:visibility="gone" />

        <ImageView
            android:id="@+id/upload_pic"
            android:layout_width="@dimen/spacing_100"
            android:layout_height="match_parent"
            android:layout_marginLeft="@dimen/spacing_15"
            android:src="@drawable/plus2x" />
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/spacing_15"
        android:layout_marginTop="@dimen/spacing_15">

        <ImageView
            android:layout_width="@dimen/spacing_25"
            android:layout_height="@dimen/spacing_25"
            android:src="@drawable/app_position" />

        <TextView
            android:id="@+id/location"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/feedback_location"
            android:textColor="@color/black" />
    </LinearLayout>

    <android.support.percent.PercentFrameLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3"
        android:background="@color/light_white">

        <Button
            android:id="@+id/feedback_submit"
            android:layout_width="match_parent"
            android:layout_height="@dimen/spacing_40"
            android:layout_gravity="center"
            android:background="@drawable/app_btn_backimage"
            android:text="@string/feedback_submit"
            android:textColor="@color/white"
            app:layout_widthPercent="80%" />
    </android.support.percent.PercentFrameLayout>


</LinearLayout>





